--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -15,6 +15,9 @@ env:
   AWS_ECR_ACCESS_KEY_ID: ${{ secrets.AWS_ECR_ACCESS_KEY_ID }}
   AWS_ECR_SECRET_ACCESS_KEY: ${{ secrets.AWS_ECR_SECRET_ACCESS_KEY }}
 
+permissions:
+  security-events: write
+
 jobs:
   push-docker-image:
     name: Push Docker Image to AWS ECR
